added button text

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,9 @@
         <button class="botStyle" id="bot4" onclick=onClick()>Left</button>
       </div>
 
-      <button class="botStyle" id="bot5" onclick=onClick()>Light 1</button>
-      <button class="botStyle" id="bot6" onclick=onClick()>Light 2</button>
-      <button class="botStyle" id="bot7" onclick=onClick()>Get Temperature</button>
-      <button class="botStyle" id="bot8" onclick=onClick()>Music</button>
+      <button class="botStyle" id="bot5" onclick=onClick()>Light</button>
+      <button class="botStyle" id="bot6" onclick=onClick()>Temperature</button>
+      <button class="botStyle" id="bot7" onclick=onClick()>Dance</button>
     </div>
     <script type="module" src="/dist/client.js"></script>
     <script src="/socket.io/socket.io.js"></script>
