added button text

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="botDiv">
       <div class="botMove">
-        <button class="botStyle" id="bot1" onclick=onClick(this)>Forward</button>
+        <button class="botStyle" id="bot1" onclick=onClick()>Forward</button>
         <button class="botStyle" id="bot2" onclick=onClick()>Backward</button>
         <button class="botStyle" id="bot3" onclick=onClick()>Right</button>
         <button class="botStyle" id="bot4" onclick=onClick()>Left</button>
